# computer_status_msgs

.github/workflows/: main.yaml
computer_status_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
computer_status_msgs/msg/: BatteryServer.msg  BatteryServer2.msg  BatteryState.msg  DashboardState.msg
computer_status_msgs/srv/: SetLaserTrajCmd.srv  SetPeriodicCmd.srv
